--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>to-do-list-group</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="Main"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
